--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,23 +2,24 @@ name: Generate Snake Game
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs at midnight UTC every day
+    # This will run the workflow automatically every day at midnight
+    - cron: '0 0 * * *'
   workflow_dispatch:
+    # This allows you to run the workflow manually from the Actions tab
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: Platane/snk@master
-        id: snake-gif
+      - name: Generate snake game
+        uses: Platane/snk@master
         with:
-          github_user_name: fatinm1
+          github_user_name: ${{ github.repository_owner }}
           svg_out_path: dist/github-contribution-grid-snake.svg
-
-      - uses: crazy-max/ghaction-github-pages@v2
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/main'
         with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
