--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,30 +1,42 @@
-name: Generate Snake Game
+name: generate animation
 
 on:
+  # run automatically every 24 hours
   schedule:
-    # This will run the workflow at midnight UTC every day
-    - cron: '0 0 * * *'
+    - cron: "0 */12 * * *" 
+  
+  # allows to manually run the job at any time
   workflow_dispatch:
-    # This allows you to run the workflow manually from the GitHub Actions tab
+  
+  # run on every push on the main branch
+  push:
+    branches:
+    - main
 
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+    
     steps:
-      - uses: actions/checkout@v3
-        with:
-          # This fetches all the history for all branches and tags
-          fetch-depth: 0
-
-      - name: Generate snake game
-        uses: Platane/snk@master
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          svg_out_path: dist/github-contribution-grid-snake.svg
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/main'
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+          
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
